@@ -23,5 +23,5 @@ define('JPATH_LIBRARIES',		JPATH_ROOT . '/libraries');
 define('JPATH_PLUGINS',			JPATH_ROOT . '/plugins');
 define('JPATH_INSTALLATION',	JPATH_ROOT . '/installation');
 define('JPATH_THEMES',			JPATH_BASE . '/templates');
-define('JPATH_CACHE',			JPATH_BASE . '/cache');
+define('JPATH_CACHE',			JPATH_ROOT . '/cache');
 define('JPATH_MANIFESTS',		JPATH_ADMINISTRATOR . '/manifests');
